<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_giphy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            tools:text="@string/welcome_username" />

        <TextView
            android:id="@+id/tv_giphy_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            tools:text="@string/gihpy_author" />

        <ImageView
            android:id="@+id/iv_gif"
            android:layout_width="match_parent"
            android:layout_height="@dimen/giphy_height"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/margin_lines"
            android:contentDescription="@string/giphy_description"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_welcome_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_username"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            tools:text="@string/welcome_username" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/logout"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_size"
            tools:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>