<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_field"
            android:text="@string/username"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_textview"
            android:text="@string/password"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:text="@string/password" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_height"
            android:layout_marginStart="@dimen/margin"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_username"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_height"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_edittext"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_double"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/forgot_password"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:text="@string/forgot_password" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:layout_marginEnd="@dimen/margin_double"
            android:text="@string/login"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:text="@string/login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
